# visualizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  pyproject.toml
.github/workflows/: package-check.yml  python-publish.yml
agent_workspaces/tieredremuneration_from_scratch/: README.md  builder_system_prompt.md  planner_brief.md  planner_system_prompt.md
agent_workspaces/tieredremuneration_from_scratch/builder_output/: visualization_builder.py  visualization_notes.md
notebooks/: basic_demo.ipynb  modular_scheduling.ipynb  theater_demo.ipynb  tiered_remuneration.ipynb  tieredremuneration.ipynb  tieredremuneration_pipeline_demo.py  tieredremuneration_support.py  untitled0_animation.ipynb
notebooks/.mplconfig/: fontlist-v390.json
notebooks/prompts/tieredremuneration/: tieredremuneration_brief.md  tieredremuneration_builder_prompt.md  tieredremuneration_packet.md  tieredremuneration_planner_prompt.md
src/visualizer/: __init__.py  instructions.py  scene.py  schedule.py  transitions.py
